# shao.cpp

./: CMakeLists.txt
src/: CMakeLists.txt
src/shao/: op.cpp  op.cu  op.hpp  tensor.cpp  tensor.hpp
test/: CMakeLists.txt  test_autodiff.cpp  test_chain_rule.cpp  test_mul_op.cpp  test_sum_op.cpp  test_tensor.cpp  test_tensor_cpu.cpp  test_tensor_gpu.cpp
test/shao/: test_tensor.cpp
